--- a/FundSharer/Views/Shared/_AccountDetails.cshtml
+++ b/FundSharer/Views/Shared/_AccountDetails.cshtml
@@ -5,11 +5,12 @@
     <div class=" = text-info">
         <dl class="dl-horizontal">
             <dt>@Html.DisplayNameFor(model => model.AccountTitle)</dt>
-            <dd>@Html.DisplayFor(model => model.AccountTitle)</dd>
-            <dt>@Html.DisplayNameFor(model => model.AccountNumber)</dt>
-            <dd>@Html.DisplayFor(model => model.AccountNumber)</dd>
-            <dt>@Html.DisplayNameFor(model => model.Bank)</dt>
-            <dd>@Html.DisplayFor(model => model.Bank)</dd>
+            @{var title = Model.AccountTitle;}
+            <dd>@Html.DisplayTextFor(model => title)</dd>
+            <dt>@Html.DisplayNameFor(model => Model.AccountNumber)</dt>
+            <dd>@Html.DisplayFor(model => Model.AccountNumber)</dd>
+            <dt>@Html.DisplayNameFor(model => Model.Bank)</dt>
+            <dd>@Html.DisplayFor(model => Model.Bank)</dd>
         </dl>
     </div>
 </div>
