--- a/FundSharer/Views/Shared/_DonationDetails.cshtml
+++ b/FundSharer/Views/Shared/_DonationDetails.cshtml
@@ -4,18 +4,20 @@
 
     <div class="list-group">
         <dl class="dl-horizontal">
+            <dt class="text-capitalize">From:</dt>
             <dt>@Html.DisplayNameFor(model => model.Donor.AccountTitle)</dt>
             <dd>@Html.DisplayFor(model => model.Donor.AccountTitle)</dd>
 
             <dt>@Html.DisplayNameFor(model => model.Donor.AccountNumber)</dt>
             <dd>@Html.DisplayFor(model => model.Donor.AccountNumber)</dd>
-            a
+            
             <dt>@Html.DisplayNameFor(model => model.Donor.Bank)</dt>
             <dd>@Html.DisplayFor(model => model.Donor.Bank)</dd>
         </dl>
     </div>
     <div class="list-group">
         <dl class="dl-horizontal">
+            <dt class="text-capitalize">To:</dt>
             <dt>@Html.DisplayNameFor(model => model.Ticket.TicketHolder.AccountTitle)</dt>
             <dd>@Html.DisplayFor(model => model.Ticket.TicketHolder.AccountTitle)</dd>
 
