--- a/FundSharer/Views/Home/Index.cshtml
+++ b/FundSharer/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
         <div class="col-md-4">
-            <div class="panel panel-info panel-body text-center">
+            <div class="well bg-info text-center">
                 <h2>About Us</h2>
                 <p>
                     Shared fund is a community where people assits one another on a platform that facilitates
@@ -19,7 +19,7 @@
             </div>
     </div>
         <div class="col-md-4">
-            <div class="panel panel-yellow panel-body text-center">
+            <div class="well bg-success text-center">
                 <h2>How it Works</h2>
                 <ul>
                     <li><p>A member donate a sum of #50,000 to a designated beneficiary member assigned by the same.</p></li>
@@ -30,7 +30,7 @@
             </div>
     </div>
         <div class="col-md-4">
-            <div class="panel panel-green panel-body text-center">
+            <div class="well bg-danger text-center">
                 <h2>Caveat</h2>
                 <ol>
                     <li><p>Kindly use spare cash for donations.</p></li>
