UPDATES TO: Dashboard view and transaction viewmodels

--- a/FundSharer/Views/Home/Dashboard.cshtml
+++ b/FundSharer/Views/Home/Dashboard.cshtml
@@ -9,16 +9,13 @@
             <div class="panel-title huge"><i class="fa fa-dashboard"></i>Dashboard</div>
         </div>
         <div class="panel-body">
-            <nav>
-                <ul class="nav nav-pills flex-column nav-justified" role="tablist">
+                <ul class="nav nav-pills flex-column nav-justified">
                     <li class="nav-item"><a id ="UsersLink" class="nav-link" href="#Users" data-toggle="pill" role="tab"><i class="fa fa-users"></i>Users</a></li>
                     <li class="nav-item"><a id ="AccountsLink" class="nav-link" href="#Accounts" data-toggle="pill" role="tab"><i class="fa fa-bank"></i>Accounts</a></li>
                     <li class="nav-item"><a id = "DonationsLink" class="nav-link" href="#Donations" data-toggle="pill" role="tab"><i class="fa fa-sitemap"></i>Donations</a></li>
                     <li class="nav-item"><a id = "PaymentsLink" class="nav-link" href="#Payments" data-toggle="pill" role="tab"><i class="fa fa-money"></i>Payments</a></li>
                     <li class="nav-item"><a id ="AdminAccountsLink" class="nav-link" href="#AdminAccounts" data-toggle="pill" role="tab"><i class="fa fa-bank"></i>Admin Accounts</a></li>
                 </ul>
-            </nav>
-            <div class="tab-content">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="panel panel-default">
@@ -26,22 +23,23 @@
                                 <div class="panel-title text-info" id="PanelTitle">Users</div>
                             </div>
                             <div class="panel-body">
-                                <div class="tab-pane fade" id="Users" role="tabpanel">
-                                   
+                                <div class="tab-content">
+                                    <div class="tab-pane fade" id="Users" role="tabpanel">
+                                        
+                                    </div>
+                                    <div class="tab-pane fade" id="Accounts" role="tabpanel">
+                                        
+                                    </div>
+                                    <div class="tab-pane fade" id="Donations" role="tabpanel">
+                                        
+                                    </div>
+                                    <div class="tab-pane fade" id="Payments" role="tabpanel">
+                                        
+                                    </div>
+                                    <div class="tab-pane fade" id="AdminAccounts" role="tabpanel">
+                                        
+                                    </div>
                                 </div>
-                                <div class="tab-pane fade" id="Accounts" role="tabpanel">
-                                  
-                                </div>
-                                <div class="tab-pane fade" id="Donations" role="tabpanel">
-                                   
-                                </div>
-                                <div class="tab-pane fade" id="Payments" role="tabpanel">
-                                    
-                                </div>
-                                <div class="tab-pane fade" id="AdminAccounts" role="tabpanel">
-                                    
-                                </div>
-                            </div>
                             </div>
                         </div>
                     </div>
@@ -54,25 +52,48 @@
 {
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" language="javascript">
+        $(document).ready( function(){
+            LoadUsers();
+            LoadBankAccounts();
+            LoadDonations();
+            LoadPayments();
+        });
+        var LoadUsers = function () {
+            var url = "/Account/Users";
+            $('#Users').load(url);
+        }
+        var LoadBankAccounts = function () {
+            var url = "/BankAccounts/BankAccounts";
+            $("#Accounts").load(url);
+        }
+        var LoadDonations = function() {
+            var url = "/Donations/Donations";
+            $("#Donations").load(url);
+        }
+        var LoadPayments = function () {
+            var url = "/Payments/Payments";
+            $("#Payments").load(url);
+        }
+
         $('#UsersLink').click(function () {
             $("#PanelTitle").text("Users");
-            $('#Users').load("/Account/UserAccounts.htm");
+            LoadUsers();
         });
         $("#AccountsLink").click(function () {
             $("#PanelTitle").text("Accounts");
-           // $('Accounts').load("Accounts/Accounts.htm");
+            LoadBankAccounts();
         });
         $("#DonationsLink").click(function () {
             $("#PanelTitle").text("Donations");
-           // $('Donations').load("Donations/Donations.htm");
+            LoadDonations();
         });
         $('#PaymentsLink').click(function () {
             $('#PanelTitle').text("Payments");
-           // $('Payments').load("Payment/Payments.htm");
+            LoadPayments();
         });
         $('#AdminAccountsLink').click(function () {
             $('#PanelTitle').text("Admin Accounts");
-            //$('AdminAccounts').load("Accounts/AdminAccounts.htm");
+            $('#AdminAccounts').load("/Accounts/AdminAccounts.html");
         });
     </script>
     
