--- a/FundSharer/Views/Home/HomePage.cshtml
+++ b/FundSharer/Views/Home/HomePage.cshtml
@@ -230,7 +230,7 @@
                     <div id="b2" class="panel-collapse collapse">
                         <div class="panel-body">
                              @{
-                                 DonationDetails OutgoingDonation = ViewBag.OutgoingDonation;
+                                 DonationDetails OutgoingDonation = ViewBag.PendingOutgoingDonation;
                                  if (OutgoingDonation != null)
                                  {
 
